add vpn request

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 											<li><a href="files/台湾圣经公会读经表.pdf">台湾圣经公会读经表</a></li>
 										</ul>
 									</li>
-									<li><a href="#">最新活动</a></li>
+									<li><a href="signupvpn.html">VPN申请</a></li>
 								</ul>
 							</li>
 							<li><a href="signupgoogledrive.html">活动报名</a></li>
@@ -76,7 +76,7 @@
 									</ul>
 									</li>
 									<li><a href="http://www2.edenchurch.me/2015wedaudio">2015周三讲道录音</a></li>
-									<li><a href="http://www2.edenchurch.me/lil">以生命印象生命视频</a></li>
+									<li><a href="http://www2.edenchurch.me/lil">以生命影响生命视频</a></li>
 								</ul>
 							</li>
 							
