update special events sign up

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 					</div>
 				
 				<!-- Nav -->
-					<nav id="nav">
+						<nav id="nav">
 						<ul>
 							<li><a href="index.html">主页</a></li>
 							<li>
@@ -64,7 +64,13 @@
 									<li><a href="signupvpn.html">VPN申请</a></li>
 								</ul>
 							</li>
-							<li><a href="signupgoogledrive.html">活动报名</a></li>
+							<li>
+								<a href="">活动报名</a>
+								<ul>
+									<li><a href="signupgoogledrive.html">日常聚会报名</a></li>
+									<li><a href="signupevents.html">特殊活动报名</a></li>
+								</ul>
+							</li>
 							<li>
 								<a href="">视频与录音</a>
 								<ul>
@@ -85,7 +91,6 @@
 							<li><a href="right-sidebar.html">Right Sidebar</a></li>
 							<li><a href="no-sidebar.html">No Sidebar</a></li>-->
 						</ul>
-					</nav>
 
 			</div>
 			
