--- a/signupevents.html
+++ b/signupevents.html
@@ -42,7 +42,7 @@
 					</div>
 				
 				<!-- Nav -->
-						<nav id="nav">
+					<nav id="nav">
 						<ul>
 							<li><a href="index.html">主页</a></li>
 							<li>
@@ -87,6 +87,8 @@
 							<li><a href="right-sidebar.html">Right Sidebar</a></li>
 							<li><a href="no-sidebar.html">No Sidebar</a></li>-->
 						</ul>
+						
+					</nav>
 
 
 			</div>
@@ -99,7 +101,7 @@
 						<header>
 							<h2><a href="#">活动报名</a></h2>
 						</header>
-						<center><iframe src="https://docs.google.com/forms/d/1ykcOnjBQQvbNKHFsTvQpnqroNUXaPqo5XMulE0uFPxo/viewform?embedded=true" width="800" height="1200" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe></center>
+						<center><iframe src="https://docs.google.com/forms/d/1u8TmBICJnzy5L9PCu2BJHN85DCwsRjja8ZMXophjSVw/viewform?embedded=true" width="800" height="1200" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe></center>
 				</div>
 
 			</div>
