--- a/signupgoogledrive.html
+++ b/signupgoogledrive.html
@@ -4,6 +4,17 @@
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-60075915-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
 <html>
 	<head>
 		<title>活动报名-伊甸校园教会</title>
