--- a/welcome.html
+++ b/welcome.html
@@ -4,7 +4,6 @@
 	html5up.net | @n33co
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -54,7 +53,7 @@
 					</div>
 				
 				<!-- Nav -->
-					<nav id="nav">
+						<nav id="nav">
 						<ul>
 							<li><a href="index.html">主页</a></li>
 							<li>
@@ -99,8 +98,6 @@
 							<li><a href="right-sidebar.html">Right Sidebar</a></li>
 							<li><a href="no-sidebar.html">No Sidebar</a></li>-->
 						</ul>
-						
-					</nav>
 
 
 			</div>
@@ -111,9 +108,9 @@
 				<div class="container">
 					<article id="main" class="special">
 						<header>
-							<h2><a href="#">活动报名</a></h2>
+							<h2><a href="#">新朋友登记表</a></h2>
 						</header>
-						<center><iframe src="https://docs.google.com/forms/d/1u8TmBICJnzy5L9PCu2BJHN85DCwsRjja8ZMXophjSVw/viewform?embedded=true" width="800" height="1200" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe></center>
+						<center><iframe src="https://docs.google.com/forms/d/1EsHb916Lg1ovr_ocQ9FBL6hL1u0lElmifieygdg6nSs/viewform?embedded=true" width="800" height="1200" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe></center>
 				</div>
 
 			</div>
