--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 										<li><a href="http://i.youku.com/u/UNjAyNTk4NTQ0">大陆优酷视频</a></li>
 									</ul>
 									</li>
-									<li><a href="http://www2.edenchurch.me/2015wedaudio">2015周三讲道录音</a></li>
-									<li><a href="http://www2.edenchurch.me/lil">以生命影响生命视频</a></li>
+									<li><a href="http://files.edenchurch.me/2015周三生命查经录音/">2015周三生命查经录音</a></li>
+									<li><a href="http://files.edenchurch.me/以生命影响生命DVD_6g/">以生命影响生命视频</a></li>
 								</ul>
 							</li>
 							
