--- a/index.html
+++ b/index.html
@@ -96,6 +96,12 @@
 									<li><a href="http://files.edenchurch.me/以生命影响生命DVD_6g/">以生命影响生命视频</a></li>
 								</ul>
 							</li>
+							<li>
+								<a href="">内部资料</a>
+								<ul>
+									<li><a href="http://secure.edenchurch.me">Secure-File</a></li>
+								</ul>
+							</li>
 							
 							
 							<!--<li><a href="left-sidebar.html">Left Sidebar</a></li>
